--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://omar-omar114.github.io/robo-friends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
